# Health-Dashboard

./: logger_config.py  main.py  pyproject.toml  requirements.txt  test.py  utility.py
backend/: __init__.py  database.py  exo_bdd.json  models.py  models_db.py  notion.py  sql.py  tracker.py  utility.py
data/: fitness.db  fitness.db-info  fitness.sql  history.csv
logs/: logger_config.py
pages/: accueil.py  entrainement.py  flux.py  tendance.py
settings/: __init__.py  config.py
utility/: __init__.py  applehealth.py  jsonfile.py  tools.py
